cabal-version: 3.4
name:          rocksdb-kv-transactions
version:       0.1.0.0
synopsis:      RocksDB backend for key-value transactions
description:
  A library providing RocksDB-backed key-value transactions with
  dependent types for type-safe multi-collection operations.

license:       Apache-2.0
license-file:  LICENSE
author:        Paolo Veronelli
maintainer:    paolo.veronelli@gmail.com
category:      Database
build-type:    Simple

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library kv-transactions
  import:           warnings
  visibility:       public
  exposed-modules:
    Database.KV.Cursor
    Database.KV.Database
    Database.KV.Query
    Database.KV.Transaction

  build-depends:
    , base           >=4.14 && <5
    , bytestring
    , containers
    , dependent-map
    , dependent-sum
    , exceptions
    , lens
    , operational
    , transformers

  hs-source-dirs:   src/kv-transactions/
  default-language: Haskell2010

library
  import:           warnings
  exposed-modules:  Database.KV.RocksDB
  build-depends:
    , base                                     >=4.14 && <5
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions:kv-transactions

  hs-source-dirs:   src/rocksdb-kv-transactions/
  default-language: Haskell2010

test-suite unit-tests
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    Database.KV.CursorSpec
    Database.KV.TransactionSpec

  build-depends:
    , base                                     >=4.14 && <5
    , bytestring
    , data-default
    , hspec
    , lens
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions
    , rocksdb-kv-transactions:kv-transactions
    , temporary

  build-tool-depends: hspec-discover:hspec-discover
  default-language:   Haskell2010
