cabal-version: 3.4
name:          rocksdb-kv-transactions
version:       0.1.0.0
synopsis:      RocksDB backend for key-value transactions
description:
  A library providing RocksDB-backed key-value transactions with
  dependent types for type-safe multi-collection operations.

license:       Apache-2.0
license-file:  LICENSE
author:        Paolo Veronelli
maintainer:    paolo.veronelli@gmail.com
copyright:     (c) 2024-2026 Paolo Veronelli
category:      Database
build-type:    Simple
homepage:      https://github.com/paolino/rocksdb-kv-transactions
bug-reports:   https://github.com/paolino/rocksdb-kv-transactions/issues
stability:     experimental
extra-doc-files:
    README.md

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library kv-transactions
  import:           warnings
  visibility:       public
  exposed-modules:
    Database.KV.Cursor
    Database.KV.Database
    Database.KV.Query
    Database.KV.Transaction

  build-depends:
    , base           >=4.14   && <5
    , bytestring     >=0.10   && <0.13
    , containers     >=0.6    && <0.8
    , dependent-map  >=0.4    && <0.5
    , dependent-sum  >=0.7    && <0.8
    , exceptions     >=0.10   && <0.11
    , lens           >=5.0    && <5.4
    , operational    >=0.2.4  && <0.3
    , transformers   >=0.5    && <0.7

  hs-source-dirs:   src/kv-transactions/
  default-language: Haskell2010

library
  import:           warnings
  exposed-modules:  Database.KV.RocksDB
  build-depends:
    , base                                     >=4.14 && <5
    , rocksdb-haskell-jprupp                   >=2.1  && <2.2
    , rocksdb-kv-transactions:kv-transactions
    , unliftio

  hs-source-dirs:   src/rocksdb-kv-transactions/
  default-language: Haskell2010

test-suite unit-tests
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    Database.KV.CursorSpec
    Database.KV.QuerySpec
    Database.KV.TransactionSpec

  build-depends:
    , base                                     >=4.14  && <5
    , bytestring                               >=0.10  && <0.13
    , data-default                             >=0.7   && <0.8
    , hspec                                    >=2.10  && <2.12
    , rocksdb-haskell-jprupp                   >=2.1   && <2.2
    , rocksdb-kv-transactions
    , rocksdb-kv-transactions:kv-transactions
    , temporary                                >=1.3   && <1.4

  build-tool-depends: hspec-discover:hspec-discover
  default-language:   Haskell2010
